<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txv_titulo_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="12dp"
        android:text="@string/titulo"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_titulo_filme"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txv_titulo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/titulo_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_titulo_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/hint_titulo"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_titulo_app" />

    <EditText
        android:id="@+id/edt_genero_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/hint_genero"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_titulo_app" />

    <TextView
        android:id="@+id/txv_genero_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="12dp"
        android:text="@string/genero"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_genero_filme"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_registrar_filme"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:minHeight="64dip"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_genero_filme" />

    <Button
        android:id="@+id/btn_listar_filmes"
        android:layout_width="210dp"
        android:layout_height="51dp"
        android:layout_marginTop="76dp"
        android:minHeight="64dip"
        android:text="@string/listar_tudo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_genero_filme" />
</androidx.constraintlayout.widget.ConstraintLayout>